src/style.css
/* ... */
.footer-links {
	display: flex;
	align-items: center;
	justify-content: center;
}

.footer-links a {
	font-weight: 200;
	margin: 0 2rem;
	position: relative;

	transition: 0.2s all ease;
}

.footer-links a::after {
	content: '';
	position: absolute;
	left: 5%;
	bottom: -5px;
	width: 0;
	height: 1px;
	background: var(--white);
	transition: 0.4s all ease;
}

.footer-links a:hover::after {
	width: 55%;
}

.scroll-to-top {
	background: var(--white);
	color: var(--primary-color);
	position: fixed;
	bottom: 20px;
	right: 20px;
	width: 60px;
	height: 60px;
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
		rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
		rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
	cursor: pointer;
	opacity: 0;
}

.scroll-to-top i {
	color: var(--primary-color);
	transform: scale(1.25);
}

/* About Page */
.main-text-container {
	text-align: right;
	margin: 4rem 2rem 0 2rem;
	line-height: 1.1;
}

.journey-section {
	padding-top: 4rem;
	min-height: 100vh;
	background: var(--white);
	color: var(--black);
}

.journey-text {
	margin-right: 2rem;
}

.journey-text p {
	font-size: 2.75rem;
}

.journey-text .primary-text {
	color: #a12e2e;
}

.journey-illustration {
	min-width: 50%;
}

.journey-section.reverse .flex {
	flex-direction: row-reverse;
	text-align: right;
}

#revealer {
	background: var(--primary-color);
}

.journey-section .container {
	min-height: inherit;
	padding: 2rem;
	align-items: center;
	opacity: 0;
}

.confetti-section {
	position: relative;
}

.confetti {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: cover;
	opacity: 0;
}

/* Contact Page */
.contact-form-container {
	margin-top: 2rem;
	max-width: 50%;
	padding: 2rem;
}

.contact-form-container h1 {
	font-size: clamp(4vw, 3.5rem, 2rem);
}

.label {
	display: block;
	font-size: 1.2rem;
	margin-left: 0.5rem;
	margin-bottom: 0.25rem;
}

.input-group {
	width: 100%;
	padding-right: 1.5rem;
	margin-bottom: 1.25rem;
}

.input {
	font-family: 'Rubik';
	width: 100%;
	outline: none;
	border: none;
	padding: 0.75rem 1.25rem;
	border-radius: 20px;
	font-size: 0.9rem;
	box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
	resize: none;
}

.btn-submit {
	font-size: 1.3rem;
}

.scroll-indicator {
	display: flex;
	justify-content: center;
	align-items: center;
	font-weight: 300;
	font-size: 0.85rem;
	position: absolute;
	cursor: ns-resize;
	bottom: 50%;
}

.scroll-indicator-right {
	transform: rotate(90deg);
	right: 0;
}

.scroll-indicator-left {
	transform: rotate(-90deg);
	flex-flow: row-reverse;
	left: 0;
	bottom: 50%;
}

.scroll-indicator .line {
	width: 50px;
	height: 2px;
	background: var(--white);
	margin: 0 1rem;
}

@media (max-height: 500px) {
	.logo {
		width: 50px;
	}

	.M-heading {
		font-size: 1.75rem;
	}

	.chose-us-section .text-container .XL-heading {
		font-size: 15vh;
	}

	.chose-us-section .shape {
		max-height: 50vh;
	}
}

@media (max-width: 768px), (orientation: portrait) {
	.flex {
		flex-direction: column;
	}

	.contact-form-container {
		max-width: 100%;
	}

	.contact-form-container h1 {
		text-align: center;
	}

	.input-group {
		padding: 0;
	}

	.logo {
		width: 45px;
	}

	.offers-globe {
		justify-content: center;
	}

	.offers-container {
		text-align: center;
	}

	.line {
		margin: 2rem auto;
	}

	.main-text-container {
		padding: 0 2rem;
		text-align: center;
	}

	.main-text-container .XL-heading {
		font-size: 3.5rem;
	}

	.main-text-container p {
		font-size: 1.2rem;
	}
}

@media (max-width: 768px) {
	.XL-heading {
		font-size: 5rem;
	}
	.nav-links {
		display: none;
	}

	.hamburger-menu {
		margin-right: 2rem;
		display: block;
		position: relative;
	}

	.fa-align-right {
		transform: scale(1.75);
	}

	.menu-icon:hover {
		cursor: pointer;
	}

	.menu-links {
		position: absolute;
		top: 100%;
		left: 50%;
		transform: translateX(-50%);

		margin-top: 1rem;
		padding: 0.5rem 0.15rem;
		background: var(--white);
		opacity: 0;
		pointer-events: none;

		animation: fade-out 0.5s forwards;
	}

	.menu-links.active {
		opacity: 1;
		pointer-events: visible;

		animation: fade-in 0.5s forwards;
	}

	.menu-links .link {
		font-weight: 400;
		margin-bottom: 0.5rem;
		font-size: 1.1rem;
		color: var(--primary-color);
	}

	.menu-links .link::after {
		background: var(--primary-color);
		bottom: 1px;
	}

	.scroll-indicator-right {
		bottom: 5rem;
		right: -1rem;
	}

	.scroll-indicator-left {
		bottom: 5rem;
		left: -1rem;
	}

	.quotes {
		width: 100%;
		padding: 0 1rem;
	}

	.chose-us-section .text-container {
		text-align: center;
	}

	.text-container h2 {
		margin-bottom: 1rem;
	}

	.journey-section .journey-text {
		text-align: center;
		margin: 0.5rem;
		margin-bottom: 2rem;
	}

	.journey-text p {
		font-size: 2.2rem;
	}

	.journey-section.reverse .flex {
		flex-direction: column;
	}
}

@media (max-width: 1000px), (orientation: portrait) {
	.footer .flex {
		flex-direction: column;
	}

	.footer .flex > div {
		margin-bottom: 3rem;
	}
}

@media (max-width: 400px) {
	.XL-heading {
		font-size: 3rem;
	}

	.L-heading {
		font-size: 3rem;
	}

	.M-heading {
		font-size: 1.65rem;
	}

	.main-text-container .XL-heading {
		font-size: 3rem;
	}

	.fa-align-right {
		transform: scale(1.35);
	}

	.footer-links {
		flex-direction: column;
	}

	.footer-links a {
		margin-bottom: 1rem;
	}
}

